landing page changes

--- a/user_guide/src/css/custom.css
+++ b/user_guide/src/css/custom.css
@@ -5,6 +5,9 @@
  */
 
 /* You can override the default Infima variables here. */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Sans&display=swap');
+
 :root {
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
@@ -27,4 +30,43 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+[data-theme='light'] {
+  --ifm-color-primary: #25c2a0;
+  --ifm-color-primary-dark: #21af90;
+  --ifm-color-primary-darker: #1fa588;
+  --ifm-color-primary-darkest: #1a8870;
+  --ifm-color-primary-light: #29d5b0;
+  --ifm-color-primary-lighter: #32d8b4;
+  --ifm-color-primary-lightest: #4fddbf;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+.custom-button{
+  background: white;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 12px;
+  padding-right: 12px;
+  text-align: center;
+  display: inline-block;
+  font-size: 0.9em;
+  margin: 2px 2px;
+  border-radius: 8px;
+  color: #124E48;
+  border: 1px solid #124E48;
+  font-family: 'Inter', sans-serif;
+}
+
+
+@media screen and (max-width: 480px) {
+  .custom-button{
+    display: none;
+  }
+}
+
+.hero-image
+{
+  margin-left: 1em;
 }
