--- a/user_guide/src/components/CustomButton/CustomButton.css
+++ b/user_guide/src/components/CustomButton/CustomButton.css
@@ -17,6 +17,29 @@
   font-family: 'Inter', sans-serif;
   font-size: 1em;
   font-weight: 600;
+  /* width: 220px; */
+}
+
+.hero-link
+{
+  background: #0E9384;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  text-align: left;
+  display: inline-block;
+  font-size: 0.9em;
+  /* margin: 2px 2px; */
+  border-radius: 8px;
+  color: rgb(255, 255, 255);
+  border: 1px solid #0E9384;
+  font-family: 'Inter', sans-serif;
+  font-size: 1em;
+  font-weight: 600;
+  margin-top: 1rem;
+  /* width: 220px; */
+  /* margin-bottom: 1rem; */
 }
 
 .secondary-button
