--- a/user_guide/src/components/LandingPageWebImage/index.css
+++ b/user_guide/src/components/LandingPageWebImage/index.css
@@ -2,9 +2,10 @@
 {
     /* height: 40vh; */
     /* margin-bottom: 2rem; */
-    display: none;
-    margin-right: auto;
-    margin-left: auto;
+    /* display: none; */
+    /* margin-right: auto;
+    margin-left: auto; */
     /* width: 100%; */
     /* height: 100%; */
+    max-width: 100%;
 }
